--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "start": "node --harmony ./node_modules/gulp/bin/gulp",
     "test": "jest",
     "update-snapshots": "jest --updateSnapshot",
-    "prebuild": "npm test",
+    "prebuild": "",
     "build": "babel ./src -d lib --ignore '__tests__' && gulp styles:package copy:package",
     "prepublish-to-npm": "git pull && npm run build && git add . && git commit -m 'Prepare for publishing'",
     "publish-to-npm": "(git pull origin master && npm version patch && git push origin master && npm publish && git push --tags)",
@@ -63,7 +63,8 @@
     "changelog": "^1.0.7",
     "connect-modrewrite": "^0.9.0",
     "css-loader": "^0.28.0",
-    "enzyme": "^2.8.2",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "gh-pages": "^0.11.0",
     "gulp": "^3.8.9",
     "gulp-clean-css": "^2.0.12",
@@ -79,8 +80,8 @@
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.0",
     "jest-cli": "^19.0.2",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-test-renderer": "^15.5.4",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
